tests/snapshots/usage/metrics__activate.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics activate
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <metricId>

Usage: vendo metrics activate <metricId>

For more information, try '--help'.

$ vendo metrics activate --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <metricId>","code":null,"status":null,"requestId":null}}
