tests/snapshots/usage/metrics__get.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics get
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <metricId>

Usage: vendo metrics get <metricId>

For more information, try '--help'.

$ vendo metrics get --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <metricId>","code":null,"status":null,"requestId":null}}
